k8s/argocd/argo-server-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.s8njee.com`)
      priority: 10
      services:
        - name: argocd-server
          port: 443
          serversTransport: argocd-server-insecure
  tls:
    secretName: argo-s8njee-com-tls
